Prevent modal contents from overlapping

--- a/src/styles/desktop.sass
+++ b/src/styles/desktop.sass
@@ -303,7 +303,7 @@
     background-color: $white
     background-image: none
     height: auto
-    padding-top: 70px
+    padding-top: 60px
 
   .settings__group
     width: 90%
