--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -35,6 +35,7 @@ a
   width: 100%
   height: 100vh
   box-sizing: border-box
+  overflow-y: auto
 
 .modal__close--desktop
   visibility: hidden
@@ -616,6 +617,7 @@ a
   +flex-direction(column)
   width: 97%
   margin-bottom: 24px
+  +flex(0, 0, auto)
 
 .settings__title
   margin: 0 0 4px
@@ -629,7 +631,7 @@ a
   +justify-content(space-between)
   +align-items(center)
   width: 100%
-  height: 55px
+  min-height: 55px
   margin-top: 6px
   padding: 0 6px
   background-color: $white
